--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    background-color: rgb(26, 25, 25);
 }
 
 /* Estilo do cabeçalho */
@@ -16,7 +17,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: rgb(27, 26, 26);
+    background-color: black;
     color: white;
 }
 
@@ -65,28 +66,37 @@ nav ul li a:hover {
 /* Seção Sobre */
 #sobre {
     padding: 80px;
-    background-color: #f4f4f4;
+    background-color: #b4b9c9;
     text-align: justify;
 }
 
 #sobre h2 {
     font-size: 32px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .text-highlight {
-    width: 1000px;
-    margin: 0 auto;
-    font-size: 18px;
     background-color: #b4b9c9;
-    padding: 20px;
-    border-radius: 5px;
+    padding: 40px;
+}
+
+.text-highlight p {
+    font-size: 18px;
+   margin: 40px;
 }
 
 /* Galeria */
 #galeria {
     text-align: center;
+    padding: 30px;
+}
+
+#galeria h2 {
+    font-size: 28px;
+    margin: 20px;
     padding: 20px;
+    color: #fff;
 }
 
 .gallery {
@@ -102,37 +112,38 @@ nav ul li a:hover {
 }
 
 .gallery-item img {
-    max-width: 100%;
-    height: auto;
+    width: 350px;
+    height: 250px;
     display: block;
     margin: 0 auto; /* Centraliza a imagem */
-}
-
-.gallery-item p {
-    margin-top: 10px;
-    font-size: 16px; /* Aumentado para melhorar a leitura */
-    color: #555;
-    text-align: center; /* Centraliza o texto abaixo da imagem */
+    border-radius: 10px;
 }
 
 
 .gallery-item p {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #555;
+    margin-top: 30px;
+    padding: 30px;
+    font-size: 16px;
+    color: #fff;
+    text-align: justify;
+    word-spacing: -3px;
 }
 
 /* Seção info-fiis */
 #info-fiis {
     padding: 20px;
+    margin: 40px;
     background-color: #f5f5f5;
+    border: solid rgb(94, 89, 89);
+    border-radius: 10px;
 }
 
-#info-fiis h2 {
-    margin-bottom: 40px;
-    font-size: 24px;
+#info-fiis h3 {
+    margin: 30px;
+    font-size: 28px;
     color: #333;
     text-align: center;
+    
 }
 
 .info-container {
@@ -144,6 +155,7 @@ nav ul li a:hover {
     margin: 0 auto;
 }
 
+
 .image-wrapper {
     flex: 1 1 300px;
     max-width: 40%;
@@ -153,33 +165,77 @@ nav ul li a:hover {
 
 .image-wrapper img {
     width: 100%;
-    object-fit: cover;
     height: 100%;
+    border-radius: 10px;
 }
 
 .text-wrapper {
     flex: 1 1 300px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.6;
     color: #333;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    margin: 20px;
+    padding: 20px;
+    border: solid rgb(94, 89, 89);
+    border-radius: 10px;
 }
 
+
+
 /* Seções Vídeo e Mapa */
-#video, #localizacao {
+
+
+
+
+
+#video h3 {
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    margin: 50px;
+    padding: 40px;
+}
+
+#video h4 {
+    font-size: 28px;
     margin-top: 30px;
+    margin-left: 40px;
+    color: #fff;
+}
+
+#video iframe {
+    border-radius: 40px;
+    margin: 30px;
     padding: 20px;
-    margin: 20px 0;
-    background-color: #f9f9f9;
-    border-radius: 5px;
+    
+}
+
+ 
+#localizacao h2 {
+    font-size: 28px;
+    color: #fff;
+    margin: 40px;
+}
+
+iframe {
+    border-radius: 20px;
+    margin: 30px;
 }
 
 /* Botão */
+
+#botao h3 {
+    font-size: 28px;
+    color: #fff;
+}
+
 #botao {
     padding: 20px;
     margin: 40px auto;
+    box-shadow: 0 0 40px 10px #ffffff21;
 }
 
 .btn {
